Fix task item spacing issues when resizing window

--- a/src/App.css
+++ b/src/App.css
@@ -107,9 +107,11 @@
 .todo-task {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   background: white;
   border-radius: 8px;
   padding: 2px;
+  min-height: 30px;
   margin: 7px 3px 0 3px;
   flex-grow: 1;
   text-align: start;
@@ -119,6 +121,7 @@
 
 .todo-task-priority-tab {
   border-radius: 8px;
+  align-self: stretch;
   padding: 4px;
 }
 
@@ -142,7 +145,7 @@
 .todo-task-name {
   font-family: Verdana, Arial, sans-serif;
   font-size: 14px;
-  max-width: 73%;
+  max-width: calc(100vw - 110px); /* 100% of screen width - space needed for buttons/checkboxes */
   margin: 0 auto 3px 8px;
   justify-self: center;
   align-self: center;
@@ -150,7 +153,7 @@
 }
 
 .todo-task-checkbox {
-  margin: 15px 0px 13px 10px;
+  margin: 11px 0px 13px 10px;
   width: 13px;
   min-width: 13px;
   height: 13px;
